# tm4c-first-boot-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.ld  memory_map.ld  package.json  tm4c129encpdt.ld  tm4c129x.specs
cmake/: libs.cmake  sensorboard.cmake  tm4c129encpdt.cmake  tm4c129xnczad.cmake
cmake/Platform/: cortexm4f.cmake
include/: memory_map.h
src/: main.c  tm4c129encpdt_startup_gcc.c
xpacks/: xpack-dev-tools-arm-none-eabi-gcc  xpack-dev-tools-cmake  xpack-dev-tools-ninja-build  xpack-dev-tools-openocd
xpacks/.bin/: arm-none-eabi-addr2line  arm-none-eabi-ar  arm-none-eabi-as  arm-none-eabi-c++  arm-none-eabi-c++filt  arm-none-eabi-cpp  arm-none-eabi-elfedit  arm-none-eabi-g++  arm-none-eabi-gcc  arm-none-eabi-gcc-ar  arm-none-eabi-gcc-nm  arm-none-eabi-gcc-ranlib  arm-none-eabi-gcov  arm-none-eabi-gcov-dump  arm-none-eabi-gcov-tool  arm-none-eabi-gdb  arm-none-eabi-gdb-add-index  arm-none-eabi-gdb-add-index-py3  arm-none-eabi-gdb-py3  arm-none-eabi-gprof  arm-none-eabi-ld  arm-none-eabi-ld.bfd  arm-none-eabi-nm  arm-none-eabi-objcopy  arm-none-eabi-objdump  arm-none-eabi-ranlib  arm-none-eabi-readelf  arm-none-eabi-size  arm-none-eabi-strings  arm-none-eabi-strip  ccmake  cmake  cpack  ctest  ninja  openocd
